# tethysext-atcore

./: .gitignore  .gitlab-ci.yml  .stickler.yml  CITATION.cff  Dockerfile  LICENSE  README.md  ci-coverage.ini  ci-test.sh  clean_up_docker_hub.sh  coverage.ini  docker-compose.test.yml  gitlab-ci.yml  install.yml  latest.tgz  pyproject.toml  setup.py  test.sh  test_succinct.sh  tox.ini
.claude/agents/: docs-api-writer.md  docs-coordinator.md  docs-narrative-writer.md  docs-scaffolder.md
.devcontainer/: Dockerfile.devcontainer  README.md  dev_environment.yml  devcontainer.json  docker-compose.devcontainer.yml  docker-compose.yml  post-start.sh  reset.sh  run-tests.sh  run.sh
.devcontainer/env/: atcore.env  db.env
.devcontainer/salt/: devcontainer.sls  top.sls
.github/: pull_request_template.md
.github/scripts/: clean_up_docker_hub.sh
.github/workflows/: check_helm.yml  docs.yml  merge-gatekeeper.yml  push_on_commits_wo_tag.yml  push_on_tag.yml  update_helm.yml
docker/: test-docker.sh
docker/salt/: post_app.sls  pre_tethys.sls  tethys_atcore.sls  top.sls
docs/: README.md  atcore-0.1.0.tgz  docs_environment.yml  generate.bat  generate.ps1  index.html  index.yaml  tethysext-atcore-0.1.1.tgz
docs/source/: ..rst  api.rst  cli.rst  conf.py  controllers.rst  controllers_app_users.rst  controllers_resource_workflows.rst  controllers_resource_workflows_map_workflows.rst  controllers_resource_workflows_results_views.rst  controllers_resource_workflows_workflow_views.rst  controllers_resources.rst  controllers_resources_tabs.rst  controllers_rest.rst  forms_widgets.rst  getting_started.rst  gizmos.rst  index.rst  job_scripts.rst  mixins.rst  models.rst  models_app_users.rst  models_file_database.rst  models_resource_workflow_results.rst  models_resource_workflow_steps.rst  models_types.rst  permissions.rst  resources_resource_workflows.rst  services.rst  services_app_users.rst  services_resource_workflows.rst  services_workflow_manager.rst  tests_factories.rst  tests_integrated_tests.rst  tests_integrated_tests_cli.rst  tests_integrated_tests_controllers.rst  tests_integrated_tests_controllers_app_users.rst  tests_integrated_tests_controllers_resource_workflows.rst  tests_integrated_tests_controllers_resource_workflows_map_workflows.rst  tests_integrated_tests_controllers_resource_workflows_results_views.rst  tests_integrated_tests_controllers_resource_workflows_workflow_view_tests.rst  (+27 more)
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: intro.md
(+766 files in other folders)
