[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tethysext-atcore"
dynamic = ["version"]
description = ""
readme = "README.md"
keywords = []
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
repository = "https://github.com/Aquaveo/tethysext-atcore"

[project.scripts]
atcore = "tethysext.atcore.cli:atcore_command"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["ez_setup", "examples", "docker", ".github", "docs", "helm", "tethysext/atcore/tests", "tethysext/atcore/tests.*"]

[tool.setuptools.package-data]
"tethysext.atcore" = [
    "templates/**/*",
    "public/**/*",
    "resources/**/*",
]
